Workshop03/istio-day3-demoapp-master/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istiodemo-ingress
  namespace: default
spec:
  selector:
    istio: ingressgateway #controller
  servers:
  - hosts: 
    - istiodemo.68.183.247.101.nip.io
    port:
      number: 80
      protocol: HTTP
      name: HTTP
